# join-thesis

./: .gitignore  Makefile  README.md  expose.tex  expose.txt  questions.md  questions.tex  questions.txt  questions_answered.md  questions_open.md
examples/old-jocaml/: README.md
examples/old-jocaml/cell-applet/: Makefile  cell-client.ml  cell-server.ml
examples/old-jocaml/square-agent/: Makefile  (+2 more)
expose/: Makefile  expose.tex
implementation/erlang/: core.erl
implementation/experiments/: experiments.cabal
implementation/experiments/src/: ActorPi.hs
implementation/experiments/src/ActorPi/: Context.hs  Examples.hs  LaTeX.hs  Scripts.hs  Show.hs  Syntax.hs  TypeCheck.hs
implementation/experiments/src/Util/: Recursion.hs
implementation/join/: LICENSE  README.md  dist_shell.config  rebar.config
questions/: encoding.txt  implementation.txt  join.txt
thesis/: Makefile  slides.tex  structure.txt  thesis.tex
thesis/abstract/: english.tex  german.tex
thesis/background/: actor-pi.tex  join.tex  pi.tex
thesis/bibliography/: thesis.bib  wrapper.tex
thesis/code/: full.tex  simple_Ba.erl  simple_Bforward.erl  simple_def_encoding.erl
thesis/conclusion/: conclusion.tex  future_work.tex
thesis/encoding/: encoding.tex  simple.tex
thesis/implementation/: basic.tex  distributed.tex
thesis/introduction/: introduction.tex
thesis/preliminaries/: actor.tex  join.tex  pi.tex
thesis/prelude/: authorship.tex  titlepage.tex
thesis/style/: grammar.sty  listings.sty  math.sty  terms.sty  theorems.sty  thesis.sty
writing/: Makefile  expose.bib  expose.tex
(+29 files in other folders)
