name:                experiments
version:             0.1.0.0
synopsis:            Proof-of-concept implementations of process calculi
homepage:            https://gitlab.tubit.tu-berlin.de/mheinzel/join-thesis
license:             BSD3
license-file:        LICENSE
author:              Matthias Heinzel
maintainer:          mheinzel@posteo.de
copyright:           2017 Matthias Heinzel
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     ActorPi.Syntax
                     , ActorPi.Context
                     , ActorPi.TypeCheck
                     , Util.Recursion
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , errors
                     , recursion-schemes
                     , free
                     , deriving-compat
